sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:17: error: reassignment to val
    v = getValeur(j)
      ^